--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://kennethmxpgit.github.io/memory-card",
+  "homepage": "https://kennethmxpgit.github.io/memory-card/",
   "name": "memory-card",
   "version": "0.1.0",
   "private": true,
